# template-svce-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile_builder  README.md  makeCtags
build-debug/: pre-build.sh
build-release/: pre-build.sh
src/: CMakeLists.txt  application.cpp  main.cpp
src/includes/eoepca/: application.h
test/: CMakeLists.txt  main.cpp
test/application/: test01.cpp
travis/: acceptanceTest.sh  build.sh  builderContainerCreation.sh  containerCreation.sh  release.sh  variables.sh
travis/libs/: build.sh  builder.sh
